crud-edit/update

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,7 @@
     <tr>
       <td><%= link_to post.title, post %></td>
       <td><%= post.content %></td>
+      <td><%= link_to "編輯", edit_post_path(post) %></td>
     </tr>
   <% end %>
   </tbody>
