--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,7 @@
       <td><%= link_to post.title, post %></td>
       <td><%= post.content %></td>
       <td><%= link_to "編輯", edit_post_path(post) %></td>
+      <td><%= link_to "刪除", post, method: :delete, data: { confirm: "確定要刪除此文章嗎?"} %></td>
     </tr>
   <% end %>
   </tbody>
