--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,9 @@
+<% if post.errors.any? %>
+  <% post.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 <%= form_for(post) do |f| %>
   <%= f.label :title, "標題" %>
   <%= f.text_field :title %>
