--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,11 @@
 <nav>
   <ul>
-    <li><%= link_to "註冊", new_registrations_path %></li>
-    <li>登入</li>
-    <li>登出</li>
+    <% if user_signed_in? %>
+      Hi, <%= current_user.email %>
+      <li><%= link_to "登出", destroy_sessions_path %></li>
+    <% else %>
+      <li><%= link_to "註冊", new_registrations_path %></li>
+      <li><%= link_to "登入", new_sessions_path %></li>
+    <% end %>
   </ul>
 </nav>
