--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% if user_signed_in? %>
       Hi, <%= current_user.email %>
-      <li><%= link_to "登出", destroy_sessions_path %></li>
+      <li><%= link_to "登出", destroy_sessions_path, method: :delete %></li>
     <% else %>
       <li><%= link_to "註冊", new_registrations_path %></li>
       <li><%= link_to "登入", new_sessions_path %></li>
