--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>標題</th>
       <th>內文</th>
+      <th>作者</th>
     </tr>
   </thead>
 
@@ -15,6 +16,7 @@
     <tr>
       <td><%= link_to post.title, post %></td>
       <td><%= post.content %></td>
+      <td><%= post.user.email %></td>
       <td><%= link_to "編輯", edit_post_path(post) %></td>
       <td><%= link_to "刪除", post, method: :delete, data: { confirm: "確定要刪除此文章嗎?"} %></td>
     </tr>
